syntax = "proto3";

package user.member.rpc;

option go_package = "./pb";

// 用户
service Service {
  // 添加用户
  rpc AddSysUser(AddSysUserReq) returns (AddSysUserResp){}
  // 删除用户
  rpc DeleteSysUser(DeleteSysUserReq) returns (DeleteSysUserResp){}
  // 更新用户
  rpc UpdateSysUser(UpdateSysUserReq) returns (UpdateSysUserResp){}
  // 更新用户状态
  rpc UpdateSysUserStatus(UpdateSysUserStatusReq) returns (UpdateSysUserStatusResp){}
  // 查询用户详情
  rpc QuerySysUserDetail(QuerySysUserDetailReq) returns (QuerySysUserDetailResp){}
  // 查询用户分页列表
  rpc QueryPageSysUserList(QueryPageSysUserListReq) returns (QueryPageSysUserListResp){}
  // 查询用户所有列表
  rpc QuerySysUserList(QuerySysUserListReq) returns (QuerySysUserListResp){}
}


// 添加用户
message AddSysUserReq {
  int64 id = 1; //用户唯一标识符，主键
  string identify = 2; //用户的唯一标识符
  string username = 3; //用户登录时使用的用户名
  string password = 4; //用户账户的密码，应存储加密后的值
  string nickname = 5; //用户在系统中显示的名字，可选
  string avatar = 6; //用户头像的URL或路径
  string quote = 7; //用户设置的个人座右铭或签名
  string birthday = 8; //用户的出生日期，用于个性化服务或统计
  int32 gender = 9; //用户的性别，0表示保密，1表示男性，2表示女性
  string email = 10; //用户的电子邮件地址，可用于找回密码或接收通知
  string telephone = 11; //用户的联系电话，可用于身份验证或联系用户
  string login_at = 12; //用户最近一次登录的时间戳
  string login_ip = 13; //用户最近一次登录的IP地址
  string login_region = 14; //用户最近一次登录的IP地址所属的地理位置
  string login_os = 15; //用户最近一次登录的操作系统
  int32 status = 16; //状态，0表示禁用，1表示正常启用
  int32 deleted = 17; //逻辑删除标志，0表示未删除，1表示已删除，允许数据恢复
  string remark = 18; //对记录的备注信息，如特殊说明等
  string create_at = 19; //记录创建的时间戳
  string create_by = 20; //创建该记录的用户标识符
}

message AddSysUserResp {
  int32 code = 1;
  string message = 2;
}

// 删除用户
message DeleteSysUserReq {
  repeated int64 ids = 1;
}

message DeleteSysUserResp {
  int32 code = 1;
  string message = 2;
}

// 更新用户
message UpdateSysUserReq {
  int64 id = 1; //用户唯一标识符，主键
  string identify = 2; //用户的唯一标识符
  string username = 3; //用户登录时使用的用户名
  string password = 4; //用户账户的密码，应存储加密后的值
  string nickname = 5; //用户在系统中显示的名字，可选
  string avatar = 6; //用户头像的URL或路径
  string quote = 7; //用户设置的个人座右铭或签名
  string birthday = 8; //用户的出生日期，用于个性化服务或统计
  int32 gender = 9; //用户的性别，0表示保密，1表示男性，2表示女性
  string email = 10; //用户的电子邮件地址，可用于找回密码或接收通知
  string telephone = 11; //用户的联系电话，可用于身份验证或联系用户
  string login_at = 12; //用户最近一次登录的时间戳
  string login_ip = 13; //用户最近一次登录的IP地址
  string login_region = 14; //用户最近一次登录的IP地址所属的地理位置
  string login_os = 15; //用户最近一次登录的操作系统
  int32 status = 16; //状态，0表示禁用，1表示正常启用
  int32 deleted = 17; //逻辑删除标志，0表示未删除，1表示已删除，允许数据恢复
  string remark = 18; //对记录的备注信息，如特殊说明等
  string update_at = 21; //记录最后更新的时间戳
  string update_by = 22; //最后更新该记录的用户标识符
}

message UpdateSysUserResp {
  int32 code = 1;
  string message = 2;
}

// 更新用户状态
message UpdateSysUserStatusReq {
  int32 status = 16; //状态，0表示禁用，1表示正常启用

}

message UpdateSysUserStatusResp {
  int32 code = 1;
  string message = 2;
}

// 查询用户详情
message QuerySysUserDetailReq {
  int64 id = 1;
}

message QuerySysUserDetailResp {
  int64 id = 1; //用户唯一标识符，主键
  string identify = 2; //用户的唯一标识符
  string username = 3; //用户登录时使用的用户名
  string password = 4; //用户账户的密码，应存储加密后的值
  string nickname = 5; //用户在系统中显示的名字，可选
  string avatar = 6; //用户头像的URL或路径
  string quote = 7; //用户设置的个人座右铭或签名
  string birthday = 8; //用户的出生日期，用于个性化服务或统计
  int32 gender = 9; //用户的性别，0表示保密，1表示男性，2表示女性
  string email = 10; //用户的电子邮件地址，可用于找回密码或接收通知
  string telephone = 11; //用户的联系电话，可用于身份验证或联系用户
  string login_at = 12; //用户最近一次登录的时间戳
  string login_ip = 13; //用户最近一次登录的IP地址
  string login_region = 14; //用户最近一次登录的IP地址所属的地理位置
  string login_os = 15; //用户最近一次登录的操作系统
  int32 status = 16; //状态，0表示禁用，1表示正常启用
  int32 deleted = 17; //逻辑删除标志，0表示未删除，1表示已删除，允许数据恢复
  string remark = 18; //对记录的备注信息，如特殊说明等
  string create_at = 19; //记录创建的时间戳
  string create_by = 20; //创建该记录的用户标识符
  string update_at = 21; //记录最后更新的时间戳
  string update_by = 22; //最后更新该记录的用户标识符
}

// 分页查询用户列表
message QueryPageSysUserListReq {
  int64 id = 1; //用户唯一标识符，主键
  string identify = 2; //用户的唯一标识符
  string username = 3; //用户登录时使用的用户名
  string password = 4; //用户账户的密码，应存储加密后的值
  string nickname = 5; //用户在系统中显示的名字，可选
  string avatar = 6; //用户头像的URL或路径
  string quote = 7; //用户设置的个人座右铭或签名
  string birthday = 8; //用户的出生日期，用于个性化服务或统计
  int32 gender = 9; //用户的性别，0表示保密，1表示男性，2表示女性
  string email = 10; //用户的电子邮件地址，可用于找回密码或接收通知
  string telephone = 11; //用户的联系电话，可用于身份验证或联系用户
  string login_at = 12; //用户最近一次登录的时间戳
  string login_ip = 13; //用户最近一次登录的IP地址
  string login_region = 14; //用户最近一次登录的IP地址所属的地理位置
  string login_os = 15; //用户最近一次登录的操作系统
  int32 status = 16; //状态，0表示禁用，1表示正常启用
  int32 deleted = 17; //逻辑删除标志，0表示未删除，1表示已删除，允许数据恢复
  int64 page_num = 18; //第几页
  int64 page_size = 19; //每页的数量
}

message PageSysUserListData {
  int64 id = 1; //用户唯一标识符，主键
  string identify = 2; //用户的唯一标识符
  string username = 3; //用户登录时使用的用户名
  string password = 4; //用户账户的密码，应存储加密后的值
  string nickname = 5; //用户在系统中显示的名字，可选
  string avatar = 6; //用户头像的URL或路径
  string quote = 7; //用户设置的个人座右铭或签名
  string birthday = 8; //用户的出生日期，用于个性化服务或统计
  int32 gender = 9; //用户的性别，0表示保密，1表示男性，2表示女性
  string email = 10; //用户的电子邮件地址，可用于找回密码或接收通知
  string telephone = 11; //用户的联系电话，可用于身份验证或联系用户
  string login_at = 12; //用户最近一次登录的时间戳
  string login_ip = 13; //用户最近一次登录的IP地址
  string login_region = 14; //用户最近一次登录的IP地址所属的地理位置
  string login_os = 15; //用户最近一次登录的操作系统
  int32 status = 16; //状态，0表示禁用，1表示正常启用
  int32 deleted = 17; //逻辑删除标志，0表示未删除，1表示已删除，允许数据恢复
  string remark = 18; //对记录的备注信息，如特殊说明等
  string create_at = 19; //记录创建的时间戳
  string create_by = 20; //创建该记录的用户标识符
  string update_at = 21; //记录最后更新的时间戳
  string update_by = 22; //最后更新该记录的用户标识符
}

message QueryPageSysUserListResp {
  int64 total = 1;
  repeated  PageSysUserListData list = 2;
}

// 查询用户列表
message QuerySysUserListReq {
  int64 id = 1; //用户唯一标识符，主键
  string identify = 2; //用户的唯一标识符
  string username = 3; //用户登录时使用的用户名
  string password = 4; //用户账户的密码，应存储加密后的值
  string nickname = 5; //用户在系统中显示的名字，可选
  string avatar = 6; //用户头像的URL或路径
  string quote = 7; //用户设置的个人座右铭或签名
  string birthday = 8; //用户的出生日期，用于个性化服务或统计
  int32 gender = 9; //用户的性别，0表示保密，1表示男性，2表示女性
  string email = 10; //用户的电子邮件地址，可用于找回密码或接收通知
  string telephone = 11; //用户的联系电话，可用于身份验证或联系用户
  string login_at = 12; //用户最近一次登录的时间戳
  string login_ip = 13; //用户最近一次登录的IP地址
  string login_region = 14; //用户最近一次登录的IP地址所属的地理位置
  string login_os = 15; //用户最近一次登录的操作系统
  int32 status = 16; //状态，0表示禁用，1表示正常启用
  int32 deleted = 17; //逻辑删除标志，0表示未删除，1表示已删除，允许数据恢复
}

message SysUserListData {
  int64 id = 1; //用户唯一标识符，主键
  string identify = 2; //用户的唯一标识符
  string username = 3; //用户登录时使用的用户名
  string password = 4; //用户账户的密码，应存储加密后的值
  string nickname = 5; //用户在系统中显示的名字，可选
  string avatar = 6; //用户头像的URL或路径
  string quote = 7; //用户设置的个人座右铭或签名
  string birthday = 8; //用户的出生日期，用于个性化服务或统计
  int32 gender = 9; //用户的性别，0表示保密，1表示男性，2表示女性
  string email = 10; //用户的电子邮件地址，可用于找回密码或接收通知
  string telephone = 11; //用户的联系电话，可用于身份验证或联系用户
  string login_at = 12; //用户最近一次登录的时间戳
  string login_ip = 13; //用户最近一次登录的IP地址
  string login_region = 14; //用户最近一次登录的IP地址所属的地理位置
  string login_os = 15; //用户最近一次登录的操作系统
  int32 status = 16; //状态，0表示禁用，1表示正常启用
  int32 deleted = 17; //逻辑删除标志，0表示未删除，1表示已删除，允许数据恢复
  string remark = 18; //对记录的备注信息，如特殊说明等
  string create_at = 19; //记录创建的时间戳
  string create_by = 20; //创建该记录的用户标识符
  string update_at = 21; //记录最后更新的时间戳
  string update_by = 22; //最后更新该记录的用户标识符
}

message QuerySysUserListResp {
  repeated  SysUserListData list = 1;
}